Thu Jan 26 20:25:39 UTC 2006  Steve Huston  <shuston@riverace.com>

        * examples/APG/Streams/BasicTask.h:
        * examples/APG/Streams/EndTask.h: Fixed ACE_Message_Block memory leaks.

Thu Jan 26 17:59:16 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * bin/MakeProjectCreator/config/dance_extension_stub.mpb
        
          Added a new MPC base project for DAnCE.

Thu Jan 26 15:38:38 UTC 2006  Steve Huston  <shuston@riverace.com>

        * protocols/ace/RMCast/Template_Instantiations.cpp: Replace the
          separate long and long long instantiations with u64 instantiations.
          This is what the code says, and avoids issues with 64-bit
          explicit instantiations builds.

Thu Jan 26 15:20:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Singleton.h:
          Doxygen improvements

Thu Jan 26 15:05:04 UTC 2006  Steve Huston  <shuston@riverace.com>

        * protocols/ace/RMCast/Template_Instantiations.cpp: Add missing
          template instantiations.

Thu Jan 26 14:02:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Message_Block_Test.cpp:
        * tests/Process_Manual_Event_Test.cpp:
        * tests/Process_Mutex_Test.cpp:
          Moved real code out of ACE_ASSERT macro's, this functionality
          wasn't executed in release mode builds. Found this because of
          warnings in the Intel release build that a variable was used
          before it was assigned a value.

Thu Jan 26 13:21:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/performance_stats.sh:
          Increased size of pictures to 800x600 and also put linux and
          gcc version into a file which is used by the other html files

        * bin/generate_performance_chart.sh:
        * bin/generate_topinfo_charts.sh:
          Generate pictures of 800x600

Thu Jan 26 13:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/configuration.shtml: