@@ -2058,6 +2058,7 @@ David Hawkins <dwh at ovro dot caltech dot edu>
 Michael Klein <michael dot klein at fazi dot de>
 Sandro Santos Andrade <sandros at dcc dot ufba dot br>
 Richard Spence <richard dot spence dot extern at icn dot siemens dot de>
+Thomas E Lackey <telackey at bozemanpass dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
